Clean up SpectrumGame a bit, fix Dropdowns, rename InterfaceElements to InputElements, change screen clear color default to be White, add font color field.

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -166,13 +166,13 @@
     <Compile Include="Framework\Screens\GameScreen.cs" />
     <Compile Include="Framework\Screens\InGameScreen.cs" />
     <Compile Include="Framework\Input\InputState.cs" />
-    <Compile Include="Framework\Screens\InterfaceElements\Button.cs" />
-    <Compile Include="Framework\Screens\InterfaceElements\Dropdown.cs" />
-    <Compile Include="Framework\Screens\InterfaceElements\InterfaceElement.cs" />
-    <Compile Include="Framework\Screens\InterfaceElements\ListOption.cs" />
-    <Compile Include="Framework\Screens\InterfaceElements\ListSelector.cs" />
-    <Compile Include="Framework\Screens\InterfaceElements\TextBox.cs" />
-    <Compile Include="Framework\Screens\InterfaceElements\TextElement.cs" />
+    <Compile Include="Framework\Screens\InputElements\Button.cs" />
+    <Compile Include="Framework\Screens\InputElements\Dropdown.cs" />
+    <Compile Include="Framework\Screens\InputElements\InputElement.cs" />
+    <Compile Include="Framework\Screens\InputElements\ListOption.cs" />
+    <Compile Include="Framework\Screens\InputElements\ListSelector.cs" />
+    <Compile Include="Framework\Screens\InputElements\TextBox.cs" />
+    <Compile Include="Framework\Screens\InputElements\TextElement.cs" />
     <Compile Include="Framework\Screens\MenuScreen.cs" />
     <Compile Include="Framework\Screens\MessageBoxScreen.cs" />
     <Compile Include="Framework\Screens\RectOffset.cs" />
