Added a HeightmapParser, and refactor terrain shape and content parsers.

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -106,6 +106,7 @@
   <ItemGroup>
     <Compile Include="Framework\Content\AnimationParser.cs" />
     <Compile Include="Framework\Content\ContentParser.cs" />
+    <Compile Include="Framework\Content\HeightmapParser.cs" />
     <Compile Include="Framework\Content\ScalableTextureParser.cs" />
     <Compile Include="Framework\Content\Texture2DParser.cs" />
     <Compile Include="Framework\Content\ModelParser.cs" />
