--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -77,10 +77,6 @@
     <Reference Include="BouncyCastle.Crypto">
       <HintPath>..\Dependencies\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
-    <Reference Include="CSCore, Version=1.0.0.2, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\CSCore.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Mono.Nat">
       <HintPath>..\Dependencies\Mono.Nat.dll</HintPath>
@@ -102,6 +98,10 @@
     <Reference Include="SharpDX.DirectInput, Version=2.5.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\SharpDX.DirectInput.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.XAudio2, Version=2.5.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Dependencies\SharpDX.XAudio2.dll</HintPath>
     </Reference>
     <Reference Include="Steamworks.NET, Version=6.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
