Added a simpler GJK version of collision detection, still have to implement EPA or something to get collision information

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Framework\Input\SpectrumMouse.cs" />
     <Compile Include="Framework\LSystem\LNode.cs" />
     <Compile Include="Framework\LSystem\LTree.cs" />
+    <Compile Include="Framework\ExtensionMethods.cs" />
     <Compile Include="Framework\MatrixHelper.cs" />
     <Compile Include="Framework\Network\ISerializable.cs" />
     <Compile Include="Framework\Network\NetID.cs" />
