--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -105,7 +105,7 @@
     </Reference>
     <Reference Include="SharpDX.XInput, Version=2.5.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Dependencies\SharpDX.XInput.dll</HintPath>
+      <HintPath>Dependencies\SharpDX.XInput.dll</HintPath>
     </Reference>
     <Reference Include="Steamworks.NET, Version=6.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
