--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -182,12 +182,12 @@
     <Compile Include="Framework\Physics\Collision\Shapes\ConeShape.cs" />
     <Compile Include="Framework\Physics\Collision\Shapes\ConvexHullShape.cs" />
     <Compile Include="Framework\Physics\Collision\Shapes\CylinderShape.cs" />
+    <Compile Include="Framework\Physics\Collision\Shapes\ISupportMappable.cs" />
     <Compile Include="Framework\Physics\Collision\Shapes\ListMultishape.cs" />
     <Compile Include="Framework\Physics\Collision\Shapes\Multishape.cs" />
     <Compile Include="Framework\Physics\Collision\Shapes\Shape.cs" />
     <Compile Include="Framework\Physics\Collision\Shapes\SphereShape.cs" />
     <Compile Include="Framework\Physics\Collision\Shapes\TerrainShape.cs" />
-    <Compile Include="Framework\Physics\Collision\XenoCollide.cs" />
     <Compile Include="Framework\Physics\Dynamics\Arbiter.cs" />
     <Compile Include="Framework\Physics\Dynamics\ArbiterMap.cs" />
     <Compile Include="Framework\Physics\Dynamics\Constraint.cs" />
@@ -199,7 +199,7 @@
     </Compile>
     <Compile Include="Framework\Physics\ResourcePool.cs" />
     <Compile Include="Framework\Physics\ThreadManager.cs" />
-    <Compile Include="Framework\Physics\World.cs" />
+    <Compile Include="Framework\Physics\PhysicsEngine.cs" />
     <Compile Include="Framework\Screens\BackgroundScreen.cs" />
     <Compile Include="Framework\Screens\Element.cs" />
     <Compile Include="Framework\Screens\ElementField.cs" />
@@ -249,7 +249,6 @@
     <Compile Include="SpectrumGame.cs" />
     <Compile Include="Framework\Entities\Entity.cs" />
     <Compile Include="Framework\Entities\EntityCollection.cs" />
-    <Compile Include="Framework\Physics\PhysicsEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Framework\Graphics\Water.cs" />
   </ItemGroup>
