--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Framework\Graphics\Animation\Bone.cs" />
     <Compile Include="Framework\Graphics\Animation\Keyframe.cs" />
     <Compile Include="Framework\Graphics\Animation\SkinningData.cs" />
+    <Compile Include="Framework\Graphics\Effects\GrassEffect.cs" />
     <Compile Include="Framework\Graphics\VertexTypes.cs" />
     <Compile Include="Framework\IDebug.cs" />
     <Compile Include="Framework\Graphics\Camera.cs" />
@@ -257,6 +258,7 @@
     <Compile Include="Framework\Graphics\Water.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\HLSL\Grass.fx" />
     <Content Include="Dependencies\Steamworks\CSteamworks.dll">
       <Link>CSteamworks.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -323,6 +325,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\HLSL\Common.fxh" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\HLSL\Grass.mgfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
