Finished switch to protobuf.net, NetMessage is cleaned up and multiplayer works again

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -176,11 +176,11 @@
     <Compile Include="Framework\ExtensionMethods.cs" />
     <Compile Include="Framework\MatrixHelper.cs" />
     <Compile Include="Framework\Network\Handshake.cs" />
-    <Compile Include="Framework\Network\ISerializable.cs" />
     <Compile Include="Framework\Network\NetID.cs" />
     <Compile Include="Framework\Network\NetMessage.cs" />
     <Compile Include="Framework\Network\Serialization.cs" />
     <Compile Include="Framework\Network\SteamP2PReceiver.cs" />
+    <Compile Include="Framework\Network\Surrogates\EntitySurrogate.cs" />
     <Compile Include="Framework\Network\Surrogates\FloatArraySurrogate.cs" />
     <Compile Include="Framework\Network\Surrogates\PrimitiveSurrogate.cs" />
     <Compile Include="Framework\Network\Surrogates\StreamSurrogate.cs" />
