Add a default 'missing' texture, support Prefabs in InitData, improve model parsing

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Framework\Debug\DebugTiming.cs" />
     <Compile Include="Framework\Entities\InitData.cs" />
     <Compile Include="Framework\Entities\Interpolator.cs" />
+    <Compile Include="Framework\Entities\Prefab.cs" />
     <Compile Include="Framework\Entities\ReplicateAttribute.cs" />
     <Compile Include="Framework\Graphics\Animation\AnimationClip.cs" />
     <Compile Include="Framework\Graphics\Animation\Bone.cs" />
@@ -308,6 +309,9 @@
     <Compile Include="Framework\Graphics\Water.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Textures\missing.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Dependencies\Steamworks\CSteamworks.dll">
       <Link>CSteamworks.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
