Add sliders and toggle buttons, fix minor bugs in graphics

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -269,8 +269,10 @@
     <Compile Include="Framework\Screens\InputElements\InputElement.cs" />
     <Compile Include="Framework\Screens\InputElements\ListOption.cs" />
     <Compile Include="Framework\Screens\InputElements\ListSelector.cs" />
+    <Compile Include="Framework\Screens\InputElements\Slider.cs" />
     <Compile Include="Framework\Screens\InputElements\TextBox.cs" />
     <Compile Include="Framework\Screens\InputElements\TextElement.cs" />
+    <Compile Include="Framework\Screens\InputElements\ToggleButton.cs" />
     <Compile Include="Framework\Screens\LayoutManager.cs" />
     <Compile Include="Framework\Screens\LinearLayout.cs" />
     <Compile Include="Framework\Screens\MenuScreen.cs" />
