--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -138,6 +138,10 @@
     <Reference Include="SharpDX">
       <HintPath>Dependencies\SharpDX.dll</HintPath>
     </Reference>
+    <Reference Include="SharpDX.Direct3D11, Version=2.6.3.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\SharpDX.Direct3D11.dll</HintPath>
+    </Reference>
     <Reference Include="SharpDX.DirectInput">
       <HintPath>Dependencies\SharpDX.DirectInput.dll</HintPath>
     </Reference>
@@ -213,6 +217,7 @@
     <Compile Include="Framework\Input\InputLayout.cs" />
     <Compile Include="Framework\Input\PlayerInformation.cs" />
     <Compile Include="Framework\Input\SpectrumMouse.cs" />
+    <Compile Include="Framework\VR\VRInput.cs" />
     <Compile Include="Framework\LSystem\LNode.cs" />
     <Compile Include="Framework\LSystem\LTree.cs" />
     <Compile Include="Framework\ExtensionMethods.cs" />
@@ -310,6 +315,8 @@
     <Compile Include="Framework\Network\MultiplayerService.cs" />
     <Compile Include="Framework\Entities\GameObject.cs" />
     <Compile Include="Framework\Entities\EntityManager.cs" />
+    <Compile Include="Framework\VR\SpecVR.cs" />
+    <Compile Include="openvr_api.cs" />
     <Compile Include="SpectrumGame.cs" />
     <Compile Include="Framework\Entities\Entity.cs" />
     <Compile Include="Framework\Entities\EntityCollection.cs" />
@@ -340,6 +347,9 @@
     <Content Include="Content\HLSL\WaterEffect.fx" />
     <Content Include="Content\Textures\blank.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="openvr_api.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
