--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -213,7 +213,7 @@
     <Compile Include="Framework\Graphics\Camera.cs" />
     <Compile Include="Framework\Input\Axis.cs" />
     <Compile Include="Framework\Input\Gamepad.cs" />
-    <Compile Include="Framework\Input\KeyBinding.cs" />
+    <Compile Include="Framework\Input\BindingOption.cs" />
     <Compile Include="Framework\Input\InputLayout.cs" />
     <Compile Include="Framework\Input\PlayerInformation.cs" />
     <Compile Include="Framework\Input\SpectrumMouse.cs" />
